# s1yle-launcher

./: .gitignore  AGENTS.md  GUIDE.md  README.en.md  README.md  RECRUIT.md  gen_diff_msg.sh  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  swagger.json  tailwind.config.js  tsconfig.json  typedoc.json  vite.config.ts
.trae/documents/: 主界面游戏管理按钮改造方案.md
docs/: CONFIG_FIX_AND_DIRECTORY_STRUCTURE.md  CONFIG_OVERWRITE_FIX_COMPLETE.md  DOWNLOAD_FIX_SUMMARY.md  GUIDE.md  HMCL 游戏设置.md  Lucide 图标使用最佳实践.md  Lucide 图标快速参考.md  Lucide 图标渲染问题修复总结.md  MAINTENANCE.md  PATH_CONFIG_AND_INSTANCE_LIST_FIX_PLAN.md  PATH_CONFIG_INTEGRATION_COMPLETE.md  QUICK_GUIDE.md  README.md  TYPES_CONFIG_REMOVAL_SUMMARY.md  api.md  architecture.md  changelog.md  components.md  skin-rendering.md  依赖分析移除计划.md  游戏管理侧边栏改造方案.md  游戏设置页面实现方案.md  统一配置系统使用指南.md  统一配置系统实现总结.md
docs/archives/: README.md
docs/plans/: README.md
public/: loading.html
scripts/: README.md  bump-version.js  bump-version.test.js  demo-version-iteration.js  generate-api.sh  generate-routes-doc.ts
src/: APP_output.css  App.css  App.tsx  main.tsx  output.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  loading.json  login.json  main.json
src-tauri/src/: account.rs  admin_account.rs  background.rs  config.rs  download.rs  font.rs  instance.rs  java.rs  json.rs  launch.rs  lib.rs  logging.rs  main.rs  modloader.rs  path_manager.rs  render.rs  window.rs
src-tauri/src/config/: commands.rs  manager.rs  mod.rs  models.rs
src-tauri/src/download/: commands.rs  deploy.rs  downloader.rs  manager.rs  mod.rs  models.rs  utils.rs  version.rs
src-tauri/src/instance/: commands.rs  manager.rs  mod.rs  models.rs  settings.rs  utils.rs  validator.rs
src/AppLayouts/: AppHeader.tsx  AppMain.tsx  AppSidebar.tsx  ClassicLayout.tsx  IslandLayout.tsx  index.ts
src/api/: account.ts  admin.ts  auth.ts  client.ts  config.ts  download.ts  folder.ts  font.ts  index.ts  instance.ts  java.ts  launch.ts  modloader.ts  skin.ts  window.ts
src/components/: AccountSidebarContent.tsx  ActionButton.tsx  CommonSidebarContent.tsx  DownloadProgressPanel.tsx  FloatingDownloadButton.tsx  GameSidebarContent.tsx  Header.tsx  InstanceConfigPanel.tsx  PageWithSidebar.tsx  Popup.tsx  PopupExamples.tsx  RouterRenderer.tsx  Sidebar.tsx  SmartSidebar.tsx
src/config/: index.ts  navigationConfig.ts  types.ts  windowStrategy.ts
src/helper/: i18n.ts  index.ts  logger.ts  popupUtils.ts  rustInvoke.ts
src/hooks/: index.ts  useAnimation.ts  useAuth.ts  useClickOutside.ts  useConfig.ts  useDialog.ts  useDownload.ts  useFloating.ts  useInstances.ts  useLoading.ts  useLoadingAction.ts  usePrefersReducedMotion.ts  useSkinAvatar.ts  (+1 more)
(+272 files in other folders)
