[package]
name = "s1yle-launcher"
version = "0.1.0"
description = "做一个有特色的mc 启动器"
authors = ["s1yle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "s1yle_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
utc = "0.2.0"
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = { version="0.3.22", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
directories = "6.0.0"

[dependencies.uuid]
version = "1.21.0"
# Lets you generate random UUIDs
features = [
    "v8",
    "v4",
    "v3"
]
